force-app/main/default/objects/ActivityLog__c/ActivityLog__c.object-meta.xml
<CustomObject>
    <description>Se genera un registro nuevo por cada visualizacion de un usuario a una vista custom: citizen o territory.</description>
    <label>ActivityLog</label>
    <nameField>
        <displayFormat>LOG{0000000}</displayFormat>
        <label>ActivityLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ActivityLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>