force-app/main/default/objects/ActivityLog__c/fields/Empatia__c.field-meta.xml
<CustomField>
    <fullName>Empatia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empatia</label>
    <referenceTo>Empatia__c</referenceTo>
    <relationshipLabel>ActivityLogs</relationshipLabel>
    <relationshipName>ActivityLogs</relationshipName>
    <type>Lookup</type>
</CustomField>