force-app/main/default/objects/ActivityLog__c/fields/Full_name__c.field-meta.xml
<CustomField>
    <fullName>Full_name__c</fullName>
    <description>Campo auxiliar para las listview</description>
    <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full name</label>
    <type>Text</type>
</CustomField>