force-app/main/default/objects/ActivityLog__c/fields/LogSource__c.field-meta.xml
<CustomField>
    <fullName>LogSource__c</fullName>
    <label>LogSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>