force-app/main/default/objects/ActivityLog__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territorio_Administrativo__c</referenceTo>
    <relationshipLabel>ActivityLogs</relationshipLabel>
    <relationshipName>ActivityLogs</relationshipName>
    <type>Lookup</type>
</CustomField>