force-app/main/default/objects/ActivityLog__c/fields/user_name__c.field-meta.xml
<CustomField>
    <fullName>user_name__c</fullName>
    <description>Se agrega user name como campo formula para facilitar la visualizacion en las listview.</description>
    <formula>CreatedBy.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User name</label>
    <type>Text</type>
</CustomField>