force-app/main/default/objects/ActivityLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LogSource__c</columns>
    <columns>Citizen__c</columns>
    <columns>Territory__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Full_name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>